src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedTranslationKey3/InvalidUnexpectedTranslationKey3.php
<?php

namespace Invalid\UnexpectedTranslationKey3;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedTranslationKey3 extends PluginBundle
{
    public function getDescriptionTranslationKey()
    {
        return '';
    }
}